[tool.poetry]
name = "decode-base64-api"
version = "1.0.0"
description = "API para decodificar arquivos base64 em diferentes formatos"
authors = ["telesinfo <telesinfo@telesinfo.com.br>"]
readme = "README.md"
packages = [{include = "decode_base64_api", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.115.12"
uvicorn = "^0.27.0"
python-multipart = "^0.0.6"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.1.1"
blue = "^0.9.1"
isort = "^6.0.1"
taskipy = "^1.14.1"
bump-pydantic = "^0.8.0"
httpx = "^0.28.1"

[tool.poetry.group.doc.dependencies]
mkdocs-material = "^9.6.12"
mkdocstrings = "^0.29.1"
mkdocstrings-python = "^1.16.10"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "."
addopts = "--doctest-modules"

[tool.blue]
line-length = 79
extend-exclude = '''
(
    \.git
    | \.venv
    | \.env
    | build
    | dist
)
'''

[tool.isort]
profile = "black"
line_length = 79
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip = [".git", ".venv", ".env", "build", "dist"]

[tool.taskipy.tasks]
lint = "blue --check --diff . && isort --check --diff ."
format = "blue . && isort ."
start = "poetry run uvicorn app.main:app --host 0.0.0.0 --port 8008 --reload"
docs = "mkdocs serve"
pre_test = "task lint"
test = "pytest -s -x --cov=app -vv"
post_test = "coverage html"

